--- a/data/config.json
+++ b/data/config.json
@@ -1,4 +1,8 @@
 {
+  "DELAY_SECONDS": {
+    "MIN": 5,
+    "MAX": 30
+  },
   "BRIDGE": true,
   "BRIDGE_DESTINATION": 56,
   "SOLVIUM_API_KEY": ""
